# internal/router/router.go
@@ -12,12 +12,12 @@ func InitRouter(engine *gin.Engine) error {
 	router := engine.Group("/")
 
 	apiV1 := router.Group("/api/v1")
-	// 爬虫实例模板
-	apiV1.POST("/crawlAccounts", api.AddCrawlAccount)
-	apiV1.GET("/crawlAccounts/:id", api.GetCrawlAccount)
-	apiV1.GET("/crawlAccounts", api.GetCrawlAccounts)
-	apiV1.PUT("/crawlAccounts/:id", api.EditCrawlAccount)
-	apiV1.DELETE("/crawlAccounts/:id", api.DeleteCrawlAccount)
+	// 爬虫账号
+	apiV1.POST("/accounts", api.AddAccount)
+	apiV1.GET("/accounts/:id", api.GetAccount)
+	apiV1.GET("/accounts", api.GetAccounts)
+	apiV1.DELETE("/accounts/:id", api.DeleteAccount)
+	apiV1.GET("/crawls/ws", api.CrawlWS)
 
 	// 爬虫实例
 	apiV1.POST("/crawlInstances", api.AddCrawlInstance)
@@ -27,7 +27,7 @@ func InitRouter(engine *gin.Engine) error {
 	apiV1.DELETE("/crawlInstances/:id", api.DeleteCrawlInstance)
 
 	// 爬虫
-	apiV1.GET("/crawl/:id", api.InitCrawl)
+	apiV1.GET("/crawl/:id", api.EditCrawlInstance)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
